--- a/css/index.css
+++ b/css/index.css
@@ -46,6 +46,7 @@ body {
 .Home:hover {
   background: rgb(247, 29, 0);
   border-radius: 10px;
+  cursor: pointer;
   padding: 5px;
 }
 .hideicon {
@@ -199,6 +200,10 @@ body {
   height: 330px;
   margin: 10px;
 }
+.itemCard:hover {
+  box-shadow: 10px 10px 12px black;
+  cursor: pointer;
+}
 .cardPic {
   width: 150px;
   height: 200px;
@@ -340,6 +345,12 @@ body {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+}
+.plusIcon:hover {
+  border: solid 1px rgb(255, 136, 0);
+}
+.plusIcon:active {
+  border: solid 1px red;
 }
 .price p {
   font-family: "Abril Fatface", serif;
