--- a/css/order.css
+++ b/css/order.css
@@ -43,6 +43,12 @@ body {
   flex-direction: column;
   margin-top: 50px;
 }
+.item1:hover {
+  background: rgb(247, 29, 0);
+  border-radius: 10px;
+  cursor: pointer;
+  padding: 5px;
+}
 .icon {
   width: 100%;
   height: 90%;
